# gamesave-rewinder

./: .editorconfig  .prettierrc  .rustfmt.toml  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.scss  App.tsx  init.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf1.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: control-window.toml  steam-library.toml
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/command/: gamesave.rs  mod.rs  steam_library.rs
src-tauri/src/game_library/: mod.rs  steam.rs
src-tauri/src/game_library/steam/: mod.rs
src-tauri/src/system_info/: win.rs
src/app/gameInfo/: GameInfo.tsx  gameInfo.scss
src/app/settings/: Settings.tsx
src/backend-command/: command.ts  window.ts
src/component/: GameCard.tsx  ModeSwitch.tsx  SaveFileCard.tsx  SaveList.tsx  SaveListCard.tsx  Titlebar.tsx
src/i18n/: i18n.ts
src/router/: router.tsx
src/store/: GameLibrary.ts
src/types/: Game.ts  GameSave.ts
