[package]
name = "game-rewinder"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-minimize", "window-close", "window-unminimize", "window-show", "window-maximize", "window-unmaximize", "window-start-dragging", "shell-open"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
steamworks = "0.11.0"
keyvalues-serde = "0.2.1"
keyvalues-parser = "0.2.0"
winreg = "0.52.0"
reqwest = "0.11.24"
directories = "5.0.1"
lnk_parser = "0.4.0"
# windows = "0.52"

[dependencies.windows]
version = "0.52"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_Registry",
		"Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
